added a paragraph and a style sheet

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
     <head>
         <title>Hello World</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Fall is Falling Near</h1>
+        <p>This is the first sentence. This is the second.</p>
     </body>
 </html>
