replaced paragraph with an image

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Fall is Falling Near</h1>
-        <p>This is the first sentence. This is the second.</p>
+        <img src="fallish.jpg" alt="A fall-ish image">
     </body>
 </html>
