--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hello World</title>
-        <link rel="stylesheet" href="style.css">
+	<title>Hello World</title>
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <h1>Fall is Falling Near</h1>
-        <img src="fallish.jpg" alt="A fall-ish image">
+	<div class="container">
+	    <div class="jumbotron">
+		<h1>Fall is Falling Near</h1>
+		<img src="fallish.jpg" alt="A fall-ish image">
+	    </div>
+	    <table class="table table-bordered">
+		<tbody>
+		    <tr>
+			<td>First Cell</td>
+			<td>Second Cell</td>
+		    </tr>
+		</tbody>
+	    </table>
+	</div>
     </body>
 </html>
